more JDK8 incompatibily eliminated